# xtop

./: Cargo.toml  LICENSE  README.md  install.ps1  install.sh  projetc.md  references.md  uninstall.ps1  uninstall.sh
src/: app.rs  main.rs  theme.rs  tui.rs  ui.rs
