[package]
name = "xtop"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.29.0"
crossterm = "0.28.1"
sysinfo = "0.33.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
chrono = "0.4"
